fixing core